locator-form-frontend/src/components/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent;
}

html {
  font-size: 16px;
  font-family: -apple-system, BlinkMacSystemFont, "avenir next", avenir,
    "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", arial,
    sans-serif;
  margin: 0;
  padding: 0;
  text-decoration-skip-ink: "auto";
  height: 100%;
}

.questions {
  background: white;
  padding: 1rem
}

:root {
  --gray-900: #1a202c;
  --gray-800: #2d3748;
  --gray-700: #4a5568;
  --gray-600: #718096;
  --gray-500: #a0aec0;
  --gray-400: #cbd5e0;
  --gray-300: #e2e8f0;
  --gray-200: #edf2f7;
  --gray-100: #f7fafc;
  --red-100: #fff5f5;
  --red-200: #fed7d7;
  --red-300: #feb2b2;
  --red-400: #fc8181;
  --red-500: #f56565;
  --red-600: #e53e3e;
  --red-700: #c53030;
  --red-800: #9b2c2c;
  --red-900: #742a2a;
  --blue-100: #ebf8ff;
  --blue-200: #bee3f8;
  --blue-300: #90cdf4;
  --blue-400: #63b3ed;
  --blue-500: #4299e1;
  --blue-600: #3182ce;
  --blue-700: #2b6cb0;
  --blue-800: #2c5282;
  --blue-900: #2a4365;
  --white: white;
  --red: #f56565;
  --text-decoration-color: var(--gray-400);
  --text-color: var(--gray-800);
  --focus-ring-color: var(--blue-500);
}

/* Typography
––––––––––––––––––––––––––––––––– */

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 1rem;
  margin-top: 1em;
  font-weight: bold;
}

h1 {
  font-size: 3.052rem;
  letter-spacing: -0.15rem;
  /* line-height: 1; */
}

h2 {
  font-size: 2.441rem;
  letter-spacing: -0.12rem;
  /* line-height: 1.2; */
}

h3 {
  font-size: 1.953rem;
  letter-spacing: -0.09rem;
  /* line-height: 1.2; */
}

h4 {
  font-size: 1.563rem;
  letter-spacing: -0.06rem;
  /* line-height: 1.3; */
}

h5 {
  font-size: 1.25rem;
  letter-spacing: -0.03rem;
  /* line-height: 0.0; */
}

h6 {
  font-size: 1rem;
  letter-spacing: 0;
  /* line-height: 1.5; */
}

p {
  margin-bottom: 1.563rem;
}

p > *:last-child {
  margin-bottom: 0;
}

a {
  color: inherit;
  text-decoration: underline;
  text-decoration-color: var(--text-decoration-color);
  -webkit-text-decoration-color: var(--text-decoration-color);
  border-radius: 5px;
  text-underline-offset: 2px;
  text-decoration-thickness: 2px;
}

@media (hover: hover) {
  a:hover {
    text-decoration-color: var(--gray-800);
  }
}

a:focus-visible {
  box-shadow: 0 0 0 2px var(--focus-ring-color);
  outline: none;
}

small {
  font-size: 0.888rem;
}

hr {
  border: 1px solid var(--gray-700);
  margin: 3.052rem 0;
}

/* Form
––––––––––––––––––––––––––––––––– */
label {
  font-weight: bold;
  display: flex;
}

body {
  padding: 0;
/*   margin: calc((100vh / 25) * 1.563) calc((100vw / 25) * 1.563); */
  background-color: #e0e9f1;
  font-weight: 400;
  line-height: 1.563;
  color: var(--text-color);
  caret-color: var(--text-color);
  height: 100%;
}

.back-button {
  background-color: #00aded;
}

.next-button {
background-color: #00aded
}

.navbar {
  background-color: #f2f2f2
}

.jumbotron {
  background-color: white;
}

.language-select-button {
  margin: 15px;
  background-color: #465159
}

input[type="email"],
input[type="text"],
input[type="smalltext"],
input[type="medtext"],
input[type="date"],
input[type="number"] {
  padding: 0.65rem 0.5rem;
  font-size: 1rem;
  border: 2px solid var(--gray-200);
  background-color: var(--gray-100);
  color: var(--gray-800);
  border-radius: 10px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}


input[type="text"],
input[type="number"],
textarea,
select {
  width: 100%;
}

select.form-control  {
  border: 2px solid var(--gray-200);
  border-radius: 10px;
  color: var(--gray-700);
  background-color: var(--gray-100);
}

select {
  margin: 0;
  -webkit-appearance: none;
  box-sizing: border-box;
  padding: 0.65rem 0.5rem;
  font-size: 1rem;
  border: 2px solid var(--gray-200);
  border-radius: 10px;
  color: var(--gray-700);
  height: auto;
  background-color: var(--gray-100);
  background-repeat: no-repeat;
  background-size: 1rem;
  background-position: center right 0.5rem;
}

textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1rem;
  border: 2px solid var(--gray-200);
  color: var(--gray-700);
  border-radius: 10px;
  resize: vertical;
  background-color: var(--gray-100);
  box-sizing: border-box;
  padding: 0.65rem 0.5rem;
  font-family: -apple-system, BlinkMacSystemFont, "avenir next", avenir,
    "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", arial,
    sans-serif;
}

input:focus,
select:focus,
textarea:focus {
  outline: none;
  border: 2px solid var(--focus-ring-color);
}

input:invalid,
select:invalid,
textarea:invalid {
  border: 2px solid #ff7d87;
  box-shadow: none;
}

input[type="checkbox"] {
  display: inline-block;
  height: 25px;
  font-size: 1rem;
  border-radius: 5px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid var(--gray-300);
  width: 25px;
  background-color: white;
  align-self: center;
  margin-right: 0.5rem;
}

input[type="checkbox"]:hover {
  cursor: pointer;
}

input[type="checkbox"]:checked {
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="78.369" height="78.369" viewBox="0 0 78.369 78.369"><path fill="white" d="M78.05 19.015l-48.592 48.59c-.428.43-1.12.43-1.548 0L.32 40.016c-.427-.426-.427-1.12 0-1.547l6.704-6.704c.428-.427 1.12-.427 1.548 0l20.113 20.112 41.113-41.113c.43-.427 1.12-.427 1.548 0l6.703 6.704c.427.427.427 1.12 0 1.548z"/></svg>');
  background-size: contain;
  background-color: var(--gray-700);
  border: 2px solid var(--gray-700);
}

input[type="checkbox"]:focus-visible,
input[type="checkbox"]:checked:focus-visible {
  border-color: var(--focus-ring-color);
}
/* ... */

